# docs/swagger.yaml
@@ -12,13 +12,13 @@ definitions:
     type: object
   handler.LoginReq:
     properties:
-      email:
-        type: string
       password:
         type: string
+      username:
+        type: string
     required:
-    - email
     - password
+    - username
     type: object
   handler.RegisterReq:
     properties:
